--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -13,6 +13,7 @@
   "author": "Kevin Willian",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -24,19 +25,20 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.5.2",
-    "tsx": "^3.12.1",
-    "typescript": "^4.9.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "5.3.1",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "15.0.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-mocha": "9.0.0",
     "eslint-plugin-sonarjs": "0.10.0",
-    "@typescript-eslint/eslint-plugin": "5.3.1",
-    "@typescript-eslint/parser": "5.3.1"
+    "sequelize-cli": "^6.5.2",
+    "tsx": "^3.12.1",
+    "typescript": "^4.9.3"
   }
 }
