--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -17,6 +18,7 @@
     "classnames": "^2.3.2",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.4",
